--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/cup.png":["assets/images/cup.png"],"assets/images/hop.png":["assets/images/hop.png"]}
+{"assets/images/ball.png":["assets/images/ball.png"],"fonts/Raleway-Italic.ttf":["fonts/Raleway-Italic.ttf"],"fonts/Raleway-Medium.ttf":["fonts/Raleway-Medium.ttf"],"packages/fluttertoast/assets/toastify.css":["packages/fluttertoast/assets/toastify.css"],"packages/fluttertoast/assets/toastify.js":["packages/fluttertoast/assets/toastify.js"]}
