--- a/assets/FontManifest.json
+++ b/assets/FontManifest.json
@@ -1,1 +1,1 @@
-[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]}]
+[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"Raleway","fonts":[{"asset":"fonts/Raleway-Medium.ttf"},{"style":"italic","asset":"fonts/Raleway-Italic.ttf"}]}]
