--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
     "short_name": "cups",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#2E2E2E",
+    "theme_color": "#222222",
+    "description": "Simple beer pong stats tracker",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
