--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,23 @@
     "short_name": "cups",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#2E2E2E",
-    "theme_color": "#222222",
-    "description": "Simple beer pong stats tracker",
+    "background_color": "#ffffff",
+    "theme_color": "#ffffff",
+    "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "icons/icon-192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-512.png",
+            "src": "icons/icon-512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "maskable"
         }
     ]
 }
